--- a/index.html
+++ b/index.html
@@ -1,133 +1,49 @@
-<!-- Example code to copy with card header & body -->
-<!-- card body Report -->
-      <div class="col-12 col-xl-10 order-1 order-xl-0">
-        <div class="mb-9">
-          <div
-            class="card shadow-none border border-300 my-4"
-            data-component-card="data-component-card"
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Toast on Button Click</title>
+    <!-- Add Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container mt-5">
+      <button id="showToastBtn" class="btn btn-primary">Show Toast</button>
+      <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+          <strong class="mr-auto">Bootstrap Toast</strong>
+          <small class="text-muted">Just now</small>
+          <button
+            type="button"
+            class="ml-2 mb-1 close"
+            data-dismiss="toast"
+            aria-label="Close"
           >
-            <!-- card header -->
-            <div class="card-header p-4 border-bottom border-300 bg-soft">
-              <div class="row g-3 justify-content-between align-items-center">
-                <div class="col-12 col-md">
-                  <h4
-                    class="text-900 mb-0"
-                    data-anchor="data-anchor"
-                    id="reports"
-                  >
-                    Reports
-                  </h4>
-                </div>
-                <div class="col col-md-auto">
-                  <nav
-                    class="nav nav-underline justify-content-end doc-tab-nav align-items-center"
-                    role="tablist"
-                  >
-                    <button
-                      class="btn btn-link px-2 text-900 copy-code-btn"
-                      type="button"
-                    >
-                      <span class="fas fa-copy me-1"></span>Copy Code</button
-                    ><a
-                      class="btn btn-sm btn-phoenix-primary code-btn ms-2"
-                      data-bs-toggle="collapse"
-                      href="#accordion-example-code"
-                      role="button"
-                      aria-controls="accordion-example-code"
-                      aria-expanded="false"
-                    >
-                      <span class="me-2" data-feather="code"></span>View code</a
-                    ><a class="btn btn-sm btn-phoenix-primary preview-btn ms-2"
-                      ><span class="me-2" data-feather="eye"></span>Preview</a
-                    >
-                  </nav>
-                </div>
-              </div>
-            </div>
-
-            <!-- card body -->
-            <div class="card-body p-0">
-              <!-- upper section -->
-              <div class="collapse code-collapse" id="accordion-example-code">
-                <pre
-                  class="scrollbar bg-200 p-3"
-                  style="max-height: 420px"
-                ><code class="code-to-copy">
-                          ELorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ornare pretium eros, quis mattis nisi sollicitudin
-                          in. Vestibulum vel urna congue, bibendum lacus a, dignissim elit. Morbi nec consequat massa. Proin dictum a urna quis
-                          pulvinar. Integer feugiat sapien lectus, quis aliquet lectus consectetur quis. Phasellus arcu leo, aliquet ac metus
-                          vitae, finibus hendrerit magna. Quisque auctor risus ut enim facilisis vestibulum. Ut accumsan tellus sit amet urna
-                          mattis malesuada. Donec in tellus nulla.
-                </code></pre>
-              </div>
-              <!-- lower section -->
-              <div class="p-4">
-                <div class="accordion" id="accordionExample">
-                  <div class="accordion-item border-top border-300">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button
-                        class="accordion-button"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne"
-                        aria-expanded="true"
-                        aria-controls="collapseOne"
-                      >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      </button>
-                    </h2>
-                    <div
-                      class="accordion-collapse collapse show"
-                      id="collapseOne"
-                      aria-labelledby="headingOne"
-                      data-bs-parent="#accordionExample"
-                    >
-                      <div class="accordion-body pt-0">
-                        <strong
-                          >Nunc luctus volutpat metus sit amet pretium</strong
-                        >
-                        Nulla ac tortor at tortor vehicula malesuada. Mauris at
-                        mi id ex auctor efficitur. Pellentesque sit amet dictum
-                        mauris. Vivamus id eleifend mi. Maecenas sodales
-                        imperdiet ante, vulputate maximus velit malesuada
-                        eleifend. Nunc vestibulum dolor vel interdum commodo.
-                      </div>
-                    </div>
-                  </div>
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                      <button
-                        class="accordion-button collapsed"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo"
-                        aria-expanded="false"
-                        aria-controls="collapseTwo"
-                      >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      </button>
-                    </h2>
-                    <div
-                      class="accordion-collapse collapse"
-                      id="collapseTwo"
-                      aria-labelledby="headingTwo"
-                      data-bs-parent="#accordionExample"
-                    >
-                      <div class="accordion-body pt-0">
-                        <strong
-                          >Nunc luctus volutpat metus sit amet pretium</strong
-                        >
-                        Nulla ac tortor at tortor vehicula malesuada. Mauris at
-                        mi id ex auctor efficitur. Pellentesque sit amet dictum
-                        mauris. Vivamus id eleifend mi. Maecenas sodales
-                        imperdiet ante, vulputate maximus velit malesuada
-                        eleifend. Nunc vestibulum dolor vel interdum commodo.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="toast-body">This is a Bootstrap toast notification.</div>
       </div>
+    </div>
+
+    <!-- Add Bootstrap JavaScript and your custom JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('#showToastBtn').click(function () {
+          $('.toast').toast('show');
+        });
+
+        $('.toast').on('hidden.bs.toast', function () {
+          // This event handler will be triggered when the toast is closed.
+          console.log('Toast closed');
+        });
+      });
+    </script>
+  </body>
+</html>
