--- a/index.html
+++ b/index.html
@@ -1,55 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leaflet Map with Mapbox Tile Layer</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="utf-8">
+  <title>Change a map's style configuration property</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+  <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet">
+  <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="map" style="height: 1000px;"></div>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <style>
+    .map-overlay {
+      font:
+        12px/20px 'Helvetica Neue',
+        Arial,
+        Helvetica,
+        sans-serif;
+      position: absolute;
+      width: 200px;
+      top: 0;
+      left: 0;
+      padding: 10px;
+    }
+
+    .map-overlay .map-overlay-inner {
+      background-color: #fff;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      border-radius: 3px;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+
+    .map-overlay-inner fieldset {
+      display: flex;
+      justify-content: space-between;
+      border: none;
+    }
+
+    .map-overlay-inner label {
+      font-weight: bold;
+      margin-right: 10px;
+    }
+
+    .map-overlay-inner .select-fieldset {
+      display: block;
+    }
+
+    .map-overlay-inner .select-fieldset label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .map-overlay-inner .select-fieldset select {
+      width: 100%;
+    }
+  </style>
+
+  <div id="map"></div>
+
+  <div class="map-overlay top">
+    <div class="map-overlay-inner">
+      <fieldset class="select-fieldset">
+        <label>Select light preset</label>
+        <select id="lightPreset" name="lightPreset">
+          <!-- Each value matches a light preset -->
+          <option value="dawn">Dawn</option>
+          <option value="day" selected="">Day</option>
+          <option value="dusk">Dusk</option>
+          <option value="night">Night</option>
+        </select>
+      </fieldset>
+      <fieldset>
+        <label for="showPlaceLabels">Show place labels</label>
+        <input type="checkbox" id="showPlaceLabels" checked="">
+      </fieldset>
+      <fieldset>
+        <label for="showPointOfInterestLabels">Show POI labels</label>
+        <input type="checkbox" id="showPointOfInterestLabels" checked="">
+      </fieldset>
+      <fieldset>
+        <label for="showRoadLabels">Show road labels</label>
+        <input type="checkbox" id="showRoadLabels" checked="">
+      </fieldset>
+      <fieldset>
+        <label for="showTransitLabels">Show transit labels</label>
+        <input type="checkbox" id="showTransitLabels" checked="">
+      </fieldset>
+    </div>
+  </div>
+
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const map = L.map('map').setView([1.5532, 110.3598], 13);
+    mapboxgl.accessToken = 'pk.eyJ1Ijoic2hycnNoYXpuaSIsImEiOiJjbHEzN3Y0bnIwODZ2MmpwbDF5Y2E0am5sIn0.fFJ-Q9JOI9fsOrkagF6kvA';
+    const map = new mapboxgl.Map({
+      container: 'map', // container ID
+      center: [110.3459, 1.5762], // starting position [lng, lat]
+      zoom: 16, // starting zoom
+      pitch: 62, // starting pitch
+      bearing: -20 // starting bearing
+    });
 
-      // Replace 'YOUR_MAPBOX_ACCESS_TOKEN' with your Mapbox access token
-      const mapboxAccessToken = 'pk.eyJ1Ijoic2hycnNoYXpuaSIsImEiOiJjbHEzN3Y0bnIwODZ2MmpwbDF5Y2E0am5sIn0.fFJ-Q9JOI9fsOrkagF6kvA';
+    // Array of marker coordinates
+    const markerCoordinates = [
+      [110.3459, 1.5762],
+      [110.3465, 1.5750],
+      [110.3450, 1.5758],
+      // Add more coordinates as needed
+    ];
 
-      L.tileLayer(`https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=${mapboxAccessToken}`, {
-        attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery &copy; <a href="https://www.mapbox.com/">Mapbox</a>',
-        id: 'mapbox/streets-v11', // You can choose a different Mapbox style
-        tileSize: 512,
-        zoomOffset: -1
-      }).addTo(map);
+    // Loop through the markerCoordinates array and add markers to the map
+    markerCoordinates.forEach((coordinates) => {
+      const marker = new mapboxgl.Marker()
+        .setLngLat(coordinates)
+        .addTo(map);
+    });
 
-      // Your Leaflet map configuration goes here
-      // Marker coordinates in Kuching
-      const markerCoordinates = [
-        [1.5532, 110.3598], // Kuching
-        [1.5488, 110.3487], // Another location
-        [1.5464, 110.4300] // Yet another location
-        // Add more coordinates as needed
-      ];
+    map.on('style.load', () => {
+      document
+        .getElementById('lightPreset')
+        .addEventListener('change', function() {
+          map.setConfigProperty('basemap', 'lightPreset', this.value);
+        });
 
-      // Add markers to the map
-      const markers = [];
-      markerCoordinates.forEach(coord => {
-        const marker = L.marker(coord).addTo(map);
-        markers.push(marker);
-      });
-
-      // Create a polyline and add it to the map
-      const polyline = L.polyline(markerCoordinates, {
-        color: 'red'
-      }).addTo(map);
-
-      // Fit the map bounds to the polyline
-      map.fitBounds(polyline.getBounds());
+      document
+        .querySelectorAll('.map-overlay-inner input[type="checkbox"]')
+        .forEach((checkbox) => {
+          checkbox.addEventListener('change', function() {
+            map.setConfigProperty('basemap', this.id, this.checked);
+          });
+        });
     });
   </script>
+
 </body>
 
 </html>
