added for qr function

--- a/index.html
+++ b/index.html
@@ -1,150 +1,51 @@
+<!-- views/index.ejs -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Change a map's style configuration property</title>
-  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-  <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet">
-  <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    #map {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Three.js with Node.js and Express</title>
 </head>
 
 <body>
-  <style>
-    .map-overlay {
-      font:
-        12px/20px 'Helvetica Neue',
-        Arial,
-        Helvetica,
-        sans-serif;
-      position: absolute;
-      width: 200px;
-      top: 0;
-      left: 0;
-      padding: 10px;
-    }
-
-    .map-overlay .map-overlay-inner {
-      background-color: #fff;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-      border-radius: 3px;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-
-    .map-overlay-inner fieldset {
-      display: flex;
-      justify-content: space-between;
-      border: none;
-    }
-
-    .map-overlay-inner label {
-      font-weight: bold;
-      margin-right: 10px;
-    }
-
-    .map-overlay-inner .select-fieldset {
-      display: block;
-    }
-
-    .map-overlay-inner .select-fieldset label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    .map-overlay-inner .select-fieldset select {
-      width: 100%;
-    }
-  </style>
-
-  <div id="map"></div>
-
-  <div class="map-overlay top">
-    <div class="map-overlay-inner">
-      <fieldset class="select-fieldset">
-        <label>Select light preset</label>
-        <select id="lightPreset" name="lightPreset">
-          <!-- Each value matches a light preset -->
-          <option value="dawn">Dawn</option>
-          <option value="day" selected="">Day</option>
-          <option value="dusk">Dusk</option>
-          <option value="night">Night</option>
-        </select>
-      </fieldset>
-      <fieldset>
-        <label for="showPlaceLabels">Show place labels</label>
-        <input type="checkbox" id="showPlaceLabels" checked="">
-      </fieldset>
-      <fieldset>
-        <label for="showPointOfInterestLabels">Show POI labels</label>
-        <input type="checkbox" id="showPointOfInterestLabels" checked="">
-      </fieldset>
-      <fieldset>
-        <label for="showRoadLabels">Show road labels</label>
-        <input type="checkbox" id="showRoadLabels" checked="">
-      </fieldset>
-      <fieldset>
-        <label for="showTransitLabels">Show transit labels</label>
-        <input type="checkbox" id="showTransitLabels" checked="">
-      </fieldset>
-    </div>
-  </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three-obj-loader@1.1.3/dist/index.min.js"></script>
   <script>
-    mapboxgl.accessToken = 'pk.eyJ1Ijoic2hycnNoYXpuaSIsImEiOiJjbHEzN3Y0bnIwODZ2MmpwbDF5Y2E0am5sIn0.fFJ-Q9JOI9fsOrkagF6kvA';
-    const map = new mapboxgl.Map({
-      container: 'map', // container ID
-      center: [110.3459, 1.5762], // starting position [lng, lat]
-      zoom: 16, // starting zoom
-      pitch: 62, // starting pitch
-      bearing: -20 // starting bearing
+    // Your Three.js code goes here
+    // For example, you can create a simple scene and render it
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer();
+
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Load the OBJ file
+    const loader = new THREE.OBJLoader();
+    loader.load('path/to/your/file.obj', function(object) {
+      // Add the loaded object to the scene
+      scene.add(object);
     });
 
-    // Array of marker coordinates
-    const markerCoordinates = [
-      [110.3459, 1.5762],
-      [110.3465, 1.5750],
-      [110.3450, 1.5758],
-      // Add more coordinates as needed
-    ];
+    camera.position.z = 5;
 
-    // Loop through the markerCoordinates array and add markers to the map
-    markerCoordinates.forEach((coordinates) => {
-      const marker = new mapboxgl.Marker()
-        .setLngLat(coordinates)
-        .addTo(map);
-    });
+    // Animation loop
+    const animate = function() {
+      requestAnimationFrame(animate);
 
-    map.on('style.load', () => {
-      document
-        .getElementById('lightPreset')
-        .addEventListener('change', function() {
-          map.setConfigProperty('basemap', 'lightPreset', this.value);
-        });
+      // Rotate the loaded object
+      if (scene.children.length > 0) {
+        const loadedObject = scene.children[0];
+        loadedObject.rotation.x += 0.01;
+        loadedObject.rotation.y += 0.01;
+      }
 
-      document
-        .querySelectorAll('.map-overlay-inner input[type="checkbox"]')
-        .forEach((checkbox) => {
-          checkbox.addEventListener('change', function() {
-            map.setConfigProperty('basemap', this.id, this.checked);
-          });
-        });
-    });
+      renderer.render(scene, camera);
+    };
+
+    animate();
   </script>
-
 </body>
 
 </html>
