--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
-<!-- views/index.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Three.js with Node.js and Express</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shoeuniverse</title>
 </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.159.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three-obj-loader@1.1.3/dist/index.min.js"></script>
-  <script>
-    // Your Three.js code goes here
-    // For example, you can create a simple scene and render it
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
-
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Load the OBJ file
-    const loader = new THREE.OBJLoader();
-    loader.load('path/to/your/file.obj', function(object) {
-      // Add the loaded object to the scene
-      scene.add(object);
-    });
-
-    camera.position.z = 5;
-
-    // Animation loop
-    const animate = function() {
-      requestAnimationFrame(animate);
-
-      // Rotate the loaded object
-      if (scene.children.length > 0) {
-        const loadedObject = scene.children[0];
-        loadedObject.rotation.x += 0.01;
-        loadedObject.rotation.y += 0.01;
-      }
-
-      renderer.render(scene, camera);
-    };
-
-    animate();
-  </script>
 </body>
+
+<script src="./moon.js" type="module"></script>
+
 
 </html>
